--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,56 +2,56 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+        Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-img{
+img {
     width: 100%;
     height: auto;
 }
 
-h1,h2{
-    font-family:'Cocogoose', Arial, Helvetica, sans-serif;
+h1,
+h2 {
+    font-family: "Cocogoose", Arial, Helvetica, sans-serif;
     color: $accent-color;
     margin-top: 0;
-
 }
 
-h1{
+h1 {
     line-height: 110%;
 }
 
-h2{
+h2 {
     font-size: 18px;
     line-height: 120%;
 }
 
-p{
+p {
     color: $gray;
-    font-family:'Cabify Circular', Arial, Helvetica, sans-serif;
+    font-family: "Cabify Circular", Arial, Helvetica, sans-serif;
 }
 
-p.subtitle{
+p.subtitle {
     font-size: 17px;
     line-height: 120%;
-
 }
 
-button{
+button {
     appearance: none;
-    font-family:'Cocogoose', Arial, Helvetica, sans-serif;
+    font-family: "Cocogoose", Arial, Helvetica, sans-serif;
     border: none;
     font-size: 16px;
     padding: 15px 30px;
@@ -61,54 +61,47 @@ button{
     box-shadow: rgba(100, 100, 111, 0.6) 0px 0px 29px 0px;
 }
 
-
 @font-face {
-    font-family: 'Cabify Circular';
-    src: local('Cabify Circular Book'), local('CabifyCircular-Book'),
-        url('/fonts/CabifyCircular-Book.woff2') format('woff2'),
-        url('/fonts/CabifyCircular-Book.woff') format('woff');
+    font-family: "Cabify Circular";
+    src: local("Cabify Circular Book"), local("CabifyCircular-Book"),
+        url("/fonts/CabifyCircular-Book.woff2") format("woff2"), url("/fonts/CabifyCircular-Book.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Akira Expanded';
-    src: local('Akira Expanded Super Bold'), local('AkiraExpanded-SuperBold'),
-        url('/fonts/AkiraExpanded-SuperBold.woff2') format('woff2'),
-        url('/fonts/AkiraExpanded-SuperBold.woff') format('woff');
+    font-family: "Akira Expanded";
+    src: local("Akira Expanded Super Bold"), local("AkiraExpanded-SuperBold"),
+        url("/fonts/AkiraExpanded-SuperBold.woff2") format("woff2"),
+        url("/fonts/AkiraExpanded-SuperBold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Cabify Circular';
-    src: local('Cabify Circular Bold'), local('CabifyCircular-Bold'),
-        url('/fonts/CabifyCircular-Bold.woff2') format('woff2'),
-        url('/fonts/CabifyCircular-Bold.woff') format('woff');
+    font-family: "Cabify Circular";
+    src: local("Cabify Circular Bold"), local("CabifyCircular-Bold"),
+        url("/fonts/CabifyCircular-Bold.woff2") format("woff2"), url("/fonts/CabifyCircular-Bold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Cabify Circular';
-    src: local('Cabify Circular Light'), local('CabifyCircular-Light'),
-        url('/fonts/CabifyCircular-Light.woff2') format('woff2'),
-        url('/fonts/CabifyCircular-Light.woff') format('woff');
+    font-family: "Cabify Circular";
+    src: local("Cabify Circular Light"), local("CabifyCircular-Light"),
+        url("/fonts/CabifyCircular-Light.woff2") format("woff2"), url("/fonts/CabifyCircular-Light.woff") format("woff");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Cocogoose';
-    src: local('Cocogoose'),
-        url('/fonts/Cocogoose.woff2') format('woff2'),
-        url('/fonts/Cocogoose.woff') format('woff');
+    font-family: "Cocogoose";
+    src: local("Cocogoose"), url("/fonts/Cocogoose.woff2") format("woff2"), url("/fonts/Cocogoose.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
-
